# RAG_technical_manual

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROJECT.md  README.md  TASKS.md  debug_query.py  inspect_chunks.py  machines.yaml  pyproject.toml
.claude/: settings.local.json
data/: machines.yaml
docs/: demo-script.md  learnings.md  technical_specification.md
docs/adr/: ADR-001-qdrant-statt-pgvector.md  ADR-002-docling-statt-unstructured.md  ADR-003-namespace-granularitaet.md  ADR-004-menupfade-eigener-index.md  ADR-005-lokales-llm-on-prem.md  ADR-006-anthropic-als-default-llm.md
eval/: questions.yaml  questions_attachments.yaml  questions_kannegiesser.yaml  report.md  report_attachments.md  report_bosch.md  run_eval.py
eval/archive/: report_bosch_2026-05-26.md
prompts/: answer_generation.md  hyde_answer.md  hyde_generation.md  image_description.md  intent_classification.md  machine_resolution.md  menu_path_extraction.md  reranker.md  safety_check.md  suggest_reformulations.md  vision_menu_extraction.md  vision_parser.md
src/wissenssystem/: config.py  logging_setup.py
src/wissenssystem/agent/: answer_generator.py  intent_classifier.py  machine_resolver.py  orchestrator.py
tests/unit/: test_agent.py  test_bm25_index.py  test_chunker.py  test_config.py  test_domain.py  test_image_describer.py  test_local_blob_store.py  test_machine_registry.py  test_menu_path_extractor.py  test_namespace.py  test_ollama_provider.py  test_pipeline.py  test_qdrant_store.py  test_retrieval.py  test_safety_detector.py  test_sentence_transformer_embeddings.py
(+43 files in other folders)
