[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wissenssystem"
version = "0.1.0"
description = "Agentisches RAG-System für Maschinen-Bedienungsanleitungen"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.12.0",
    "docling>=2.0.0",
    "streamlit>=1.40.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.120.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wissenssystem"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external services (Qdrant, etc.)",
]
